Bug 408073 - "Some frames of this animated gif image looks slightly distorted" (Fix the clearing of the 'second' frame) [p=alfredkayser@nl.ibm.com (Alfred Kayser) r=stuart sr=tor a=blocking1.9+]